# Ada_Compiler_Construction

./: .gitignore  Deep Wiki for Ada Compiler Construction.url  ETHICAL_AI_USE.md  MathQuest-Aria.py  README-test-runner.md  README.md  pyproject.toml  requirements.txt  test_runner.py
A1 - Lexical Analyzer/: A1 - Lexical Analyzer.md  JohnA1-Aria.py  JohnA1.py  README-A1-Aria.md  README-A1.md  t1.ada  t1_tokens.txt  t2.ada  t2_expected.txt  t3.ada  t4.ada  tokens3_tokens.txt  tokens_tokens.txt
A2 - Parser/: A2 - Parser.md  Program 2 - A2 Parser-2025-02-10-071212.mmd  Program 3 - A2 Parser-2025-02-10-075251.mmd
A3_Recursive_Parser/: A3T1.ada  A3T2.ada  A3_Recursive_Parser.md  JohnA3.py  README-A3.md  t56.ada
A4_Ada_Symbol_Table/: A4_Ada_Symbol_Table.md  IntegrationTest.py  JohnA4.py  README_A4_Symbol_Table.md  TestSymbolTable.py
A5_Semantic_Analyzer/: A3T4.ada  A5_Semantic_Analyzer.md  JohnA5.py  README.md  t51.ada  t55.ada  test_program.ada
A6_Grammar_Rules_to_Paser/: JohnA6.py  RDParserExtended.py  README.md
A7_3_Address_Code/: A7_3_Address_Code.md  JohnA7.py  minimal_test.ada  simple_test.ada  test_tac.ada
Modules/: AdaSymbolTable.py  Definitions-Aria.py  Definitions.py  Driver.py  ErrorHandler-Aria.py  ErrorHandler.py  FileHandler.py  LexicalAnalyzer.py  Logger.py  RDParser.py  RDParserExtended.py  SemanticAnalyzer.py  ThreeAddressCodeGenerator.py  Token.py
docs/: IMPROVEMENTS.md  PROFESSIONAL_OVERVIEW.md  assignments.md  classes.md  development.md  index.md  modules.md  testing.md
test_files/: TestResults.docx  basic_constructs_tests.ada  c1.ada  t53.ada  test1.ada  test11.ada  test12.ada  test13.ada  test14.ada  test15.ada  test16.ada  test17.ada  test18.ada  test19.ada  test2.ada  test21.ada  test25.txt  test26.ada  test27.ada  test28.ada  test3.ada  test31.ada  test4.ada  test5.ada  tf_error_duplicate_declaration1.ada  (+5 more)
(+252 files in other folders)
